package ar.edu.unahur.obj2.uml.Vehiculos;

public class Bicicleta extends Vehiculo {
    private Integer rodado;

    public Bicicleta(Integer rodado) {
        this.rodado = rodado;
    }

    public Integer getrodado() {
        return rodado;
    }
    
}
